fix(KSTIP-2625): inverted profile check to only throw with %dev